# sqlx-paginated

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml  security.yml  test.yml
examples/sqlx-paginated-sqlite-example/: .gitignore  Cargo.toml  README.md
examples/sqlx-paginated-sqlite-example/docs/bruno/: .gitignore  API Info.bru  Health Check.bru  bruno.json
examples/sqlx-paginated-sqlite-example/docs/bruno/Products/: Combined Query.bru  Filter by Category.bru  In Stock Filter.bru  List All Products.bru  Multiple Categories Filter.bru  Price Range Filter.bru  Search Products.bru  Sort by Price.bru
examples/sqlx-paginated-sqlite-example/docs/bruno/Users/: Filter by Confirmed.bru  List All Users.bru  Pagination.bru  Search Users.bru  Sort by Created Date.bru
examples/sqlx-paginated-sqlite-example/docs/bruno/environments/: Local.bru
examples/sqlx-paginated-sqlite-example/migrations/: 20260101000001_create_users_table.sql  20260101000002_create_products_table.sql  20260101000003_seed_test_data.sql
examples/sqlx-paginated-sqlite-example/src/: main.rs
scripts/: e2e.sh
src/: lib.rs
src/paginated_query_as/: database_query_defaults.rs  macro.rs  mod.rs  models.rs  utils.rs
src/paginated_query_as/builders/: paginated_query_builder.rs  query_params_builder.rs
src/paginated_query_as/examples/: mod.rs  paginated_query_builder_advanced_examples.rs  query_builder_examples.rs  query_filters_examples.rs
tests/: end_to_end.rs  integration.rs
tests/end_to_end/: postgres.rs  sqlite.rs
tests/integration/: pagination.rs  query_filter_operators.rs
(+30 files in other folders)
