[package]
name = "sqlx-paginated"
version = "0.3.1"
edition = "2021"
authors = ["@alexandrughinea"]
description = "A flexible, type-safe SQLx query builder for dynamic web APIs, offering seamless pagination, searching, filtering, and sorting."
license = "MIT"
repository = "https://github.com/alexandrughinea/sqlx-paginated"
documentation = "https://docs.rs/sqlx-paginated"

[features]
tracing = ["tracing/default"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"] # Planned - Q2 2026
default = ["postgres"]

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "json"
] }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = { version = "0.1.44", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = "1.47.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
